# mini_chatgpt

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  seed.py  services.py
backend/app/api/: agents.py  auth.py  chat.py
backend/app/gateways/: __init__.py  model_gateway.py  tool_gateway.py
backend/tests/: test_api.py
docs/: implementation-plan.md  local-development.md  system-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
