[project]
name = "mini-chatgpt-backend"
version = "0.1.0"
description = "FastAPI backend for the mini ChatGPT platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "PyJWT>=2.9.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
